--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <main class="main">
         <div class="list" id="list"></div>
         <div class="pagesnumbers" id="pagination"></div>
+        <div class="popUp_list"></div>
+
     </main>
     <script src="./Js/main.js"></script>
 </body>
