--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navBar">
         <img src="images/Star_Wars_Logo.svg" alt="StarWars" class="nav__bar-img" />
-        <input type="text" name="Search" class="nav__bar-input" value=" Search..." onfocus="this.value=''" />
+        <input type="text" name="Search" class="nav__bar-input" placeholder="Search" />
     </nav>
     <main class="main">
         <div class="list" id="list"></div>
