--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <nav class="navBar">
         <img src="images/Star_Wars_Logo.svg" alt="StarWars" class="nav__bar-img" />
-        <input type="text" name="Search" class="nav__bar-input" placeholder="Search" />
+        <input type="text" name="Search" class="nav__bar-input" placeholder=" Search..." />
     </nav>
+    <h2 class="StarWars_Characters">StarWars Characters</h2>
     <main class="main">
         <div class="list" id="list"></div>
         <div class="pagesnumbers" id="pagination"></div>
         <div class="popUp_list"></div>
-
     </main>
     <script src="./Js/main.js"></script>
 </body>
